--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-router-flux": "^4.0.6",
-    "redux": "^4.0.5"
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
