--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
     "http": "0.0.0",
     "jsonwebtoken": "^5.0.0",
     "mongoose": "latest",
+    "nodemailer": "^6.4.2",
+    "nodemailer-express-handlebars": "^3.1.0",
     "sanitize": "^2.1.0",
+    "save": "^2.4.0",
     "xss-clean": "^0.1.1",
     "xtend": "~2.1.2"
   },
