--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-router-flux": "^4.0.6",
+    "react-native-keychain": "^4.0.5",
+    "react-native-touch-id": "^4.4.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-form": "^8.2.6",
